package biblioteca.modelo;

/**
 * Representa los posibles estados de un usuario en la biblioteca.
 */
public enum EstadoUsuario {
    /**
     * Indica que el usuario está activo y dado de alta en el sistema.
     */
    ALTA,

    /**
     * Indica que el usuario está inactivo o dado de baja en el sistema.
     */
    BAJA
}
