package biblioteca.modelo;

/**
 * Enumeración que representa los diferentes tipos de copias de libros disponibles en la biblioteca.
 * 
 * TAPA_DURA: Copia en formato de tapa dura.
 * RUSTICA: Copia en formato rústico (tapa blanda).
 * AUDIO: Copia en formato de audio.
 * ELECTRONICO: Copia en formato electrónico.
 */
public enum TipoCopia {
    TAPA_DURA,
    RUSTICA,
    AUDIO,
    ELECTRONICO,
    REFERENCIA
}